removed presentation files from build branch

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ IncrementalSoundBankData.xml
 #ignores all notes
 ./Shared Notes/
 ./Git-Workshop-Folien-WiSe2425-handout.pdf
+./Presentation14.01.2025/
